# Fixops

./: .coverage  .coveragerc  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .gitleaks.toml  .graphifyignore  .pip-audit-allowlist.toml  .pre-commit-config.yaml  .secrets.baseline  ACQUISITION_GRADE_PROMPT.md  ANSWER_TO_YOUR_QUESTION.md  ARCHITECTURE.md  AUGGIE_PROMPT_API_DEPTH.md  BACKLOG.csv  BACKTESTING_DEMO.md  CHANGELOG.md  CISO_EXECUTIVE_SUMMARY.md  CLAUDE.md  CLI_API_INVENTORY.md  CLI_FLOW_DOCUMENTATION.md  COMPLETE_DEMO_GUIDE.md  COMPLETE_PR_185_IMPROVEMENTS.md  COMPLETE_VC_DEMO_GUIDE.md  COMPREHENSIVE_DEMO_GUIDE.md  CONTRIBUTING.md  CREATE_PR_INSTRUCTIONS.md  CTO_TECHNICAL_BRIEF.md  DEEP_DIVE_FINDINGS.md  DEMO_LOG.md  DEMO_README.md  DEPLOYMENT.md  DEPRECATIONS.md  DEVIN_CONTEXT.md  DEVIN_CONTEXT_backup.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.demo  (+176 more)
.aldeci/: integration_topology_dump.json
.claude-flow/: CAPABILITIES.md  config.yaml
.devin/: wiki.json
.emergent/: emergent.yml  summary.txt
.fixops_data/: .jwt_secret
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.omc/: CRASH_RECOVERY.md  RESUME_PLAN.md  SESSION_HANDOFF.md  TASKS_STATE_2026-04-22.md  multica-pending-2026-04-25.json  prd.json  progress.txt  project-memory.json
.playwright-cli/: page-2026-04-16T09-46-40-541Z.yml  page-2026-04-16T09-47-16-984Z.yml  page-2026-04-16T10-27-16-938Z.yml  page-2026-04-16T10-43-59-417Z.yml  page-2026-04-16T10-47-47-674Z.yml  page-2026-04-16T10-55-26-569Z.yml  page-2026-04-16T11-01-22-001Z.yml
beast-mode/: .gitignore  FILES_CREATED.txt  README.md  beast.config.yaml  beast.py  pyproject.toml
beast-mode/agents/: agent_config.py
beast-mode/dashboard/: status.py
beast-mode/gates/: gate_runner.py  phase_gates.yaml
beast-mode/phases/: phase_01.yaml  phase_02.yaml  phase_03.yaml  phase_04.yaml  phase_05.yaml  phase_06.yaml  phase_07.yaml  phase_08.yaml  phase_09.yaml  phase_10.yaml
(+12328 files in other folders)
